fix align ul section navbar

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,9 +6,9 @@
     background: black;
     color: white;
     
-}
+} */
 
-.mainDiv { 
+/* .mainDiv { 
     display: flex;
     justify-content: center;
     align-items: center;
